--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: fulin87的笔记
+title: 2B程序员的笔记
 email: fulin87@sina.com
 description1: 唯天下之至诚，胜天下之至伪
 description2: 唯天下之至拙，胜天下之至巧
