--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,4 @@ github_username:  fulin87
 
 # Build settings
 markdown: kramdown
-destination: E:\home\mine\study\git\fulin87.github.io
+destination: D:\code\fulin87.github.io
