--- a/themes/aath/_config.yml
+++ b/themes/aath/_config.yml
@@ -10,7 +10,7 @@ menu:
   标签: /tags
 
 # Miscelaneous
-favicon: /favicon.ico
+favicon: /content/image/manman.ico
 
 # stylesheets loaded in the <head>
 stylesheets:
